# fmvparse

./: .gitignore  Cargo.toml  README.md  output.txt
src/: boxes.rs  boxes_old.rs  error.rs  header.rs  lib.rs  mp4.rs  reader.rs
src/atom/: free.rs  ftype.rs  inner.rs  mdat.rs  media_data.rs  mod.rs  movie.rs  mp4_atom.rs  track.rs
src/atom/media/: media_info.rs  mod.rs  sample_table.rs
src/boxes/: file_type.rs  free.rs  ftype.rs  inner.rs  media_data.rs  mod.rs  movie.rs  mp4_atom.rs  mp4_box.rs  track.rs  wide.rs
src/boxes/media/: media_info.rs  mod.rs  sample_table.rs  stco.rs
