[package]
name = "fmvparse"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/musec/fmvparse.git"
description = "Parse Mp4 files and extract the internal structures."
authors = ["Arastoo Bozorgi <ab1502@mun.ca>", "Samir Dharar <sdharar@mun.ca>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
downcast-rs = "1.2.0"
env_logger = "0.8"
log = "0.4.0"
structopt = "0.3"